<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70000000"
    tools:context=".Tasks.AddTaskActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/cardView_padding"
        app:layout_constraintWidth_percent="0.75">

        <EditText
            android:id="@+id/purchase_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint_string"
            android:inputType="text" />

        <EditText
            android:id="@+id/purchase_price_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elements_margin"
            android:hint="@string/price_hint_string"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/purchase_title_editText" />

        <Spinner
            android:id="@+id/purchase_currency_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elements_margin"
            android:entries="@array/currencies"
            app:layout_constraintTop_toBottomOf="@id/purchase_price_editText" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elements_margin"
            android:text="@string/add_btn_string"
            app:layout_constraintEnd_toStartOf="@id/cancel_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchase_currency_spinner" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/elements_margin"
            android:text="@string/cancel_btn_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/add_btn"
            app:layout_constraintTop_toBottomOf="@id/purchase_currency_spinner" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>